<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@drawable/chat_bg">
      <LinearLayout
          android:layout_marginTop="40dp"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:orientation="horizontal">

<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/name"
    android:textSize="20sp"
    android:layout_margin="10dp"/>
          <EditText
              android:id="@+id/register_name"
              android:inputType="text"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:imeOptions="actionDone"/>
      </LinearLayout>

    <LinearLayout
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/sex"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sex"
            android:textSize="20sp"
            android:layout_margin="10dp"/>
        <TextView
            android:id="@+id/select_sex"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="女"
            android:textSize="20sp"
            android:layout_margin="10dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/age"
            android:textSize="20sp"
            android:layout_margin="10dp"/>
        <com.example.horizontalselectedviewlibrary.HorizontalselectedView
            android:id="@+id/hd_main"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            app:HorizontalselectedViewSeesize="5"
            app:HorizontalselectedViewSelectedTextColor="@color/black"
            app:HorizontalselectedViewSelectedTextSize="30"
            app:HorizontalselectedViewTextColor="@color/gray"
            app:HorizontalselectedViewTextSize="20" />

    </LinearLayout>
    <LinearLayout
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/address"
            android:textSize="20sp"
            android:layout_margin="10dp"/>
        <TextView
            android:id="@+id/select_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="请选择你所在的地区"
            android:textSize="20sp"
            android:layout_margin="10dp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/abstracts"
            android:textSize="20sp"
            android:layout_margin="10dp"/>
        <EditText
            android:inputType="text"
            android:maxLines="2"
            android:layout_marginTop="10dp"
            android:hint="用一句话描述自己"
            android:textSize="15sp"
            android:id="@+id/register_abstracts"
            android:layout_width="match_parent"

            android:layout_height="wrap_content" />
    </LinearLayout>
    <Button
        android:id="@+id/Register_next"
        android:text="@string/comment_sub"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/select"
        android:focusable="true"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="25dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true" />
</LinearLayout>
