<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/page_backgroup"
    android:orientation="vertical">
    <RelativeLayout
        android:id="@+id/relat"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="#30d1c4"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true">
        <TextView
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="详情"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:textSize="20sp"
            />
        <ImageView
            android:id="@+id/paizhao"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/ic_plus"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"/>

    </RelativeLayout>

    <ScrollView
        android:id="@+id/scro"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <ImageView
                android:scaleType="centerCrop"
                android:id="@+id/layout_img"
                android:layout_width="match_parent"
                android:layout_height="256dp"
                android:background="@drawable/background"
                android:layout_alignParentTop="true"
                android:layout_alignParentStart="true" />
            <android.support.v7.widget.RecyclerView
                android:layout_below="@id/layout_img"
                android:id="@+id/layout_recycler"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"></android.support.v7.widget.RecyclerView>
         <LinearLayout
             android:layout_marginTop="5dp"
         android:layout_below="@id/layout_recycler"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
             android:orientation="vertical">
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
                 <TextView
                      android:layout_marginLeft="20dp"
                     android:id="@+id/layout_introduce"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="最近上线时间："
                     android:textSize="20sp"
                     android:textColor="@color/cpt_black_353d44"/>

                 <TextView
                     android:layout_marginLeft="55dp"
                     android:id="@+id/layout_time"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="2017-07-13 17:11"
                     android:textSize="20sp"
                     android:textColor="@color/cpt_black_353d44"/>
             </LinearLayout>

             <LinearLayout
                 android:layout_marginTop="5dp"
                 android:layout_width="match_parent"
                 android:layout_height="40dp"
                 android:background="@color/color_white_f7f7f7">
                 <ImageView
                     android:layout_width="40dp"
                     android:layout_height="40dp"
                     android:src="@drawable/nicheng"
                     android:layout_gravity="center_vertical"
                     android:layout_marginLeft="15dp"/>
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textSize="22sp"
                     android:layout_marginTop="4dp"
                     android:layout_gravity="center_vertical"
                     android:text="@string/nicheng"
                     android:textColor="@color/coupon_yun"/>
                 <TextView
                     android:id="@+id/layout_name"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textSize="22sp"
                     android:layout_marginTop="4dp"
                     android:layout_gravity="center_vertical"
                     android:text="haha"
                     android:textColor="@color/coupon_yun"/>
             </LinearLayout>

             <LinearLayout
                 android:layout_marginTop="5dp"
                 android:layout_width="match_parent"
                 android:layout_height="40dp"
                 android:background="@color/color_white_f7f7f7">
                 <ImageView
                     android:layout_width="30dp"
                     android:layout_height="30dp"
                     android:src="@drawable/xingb"
                     android:layout_gravity="center_vertical"
                     android:layout_marginLeft="20dp"/>
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textSize="22sp"
                     android:layout_marginTop="4dp"
                     android:layout_gravity="center_vertical"
                     android:text="@string/sex"
                     android:layout_marginLeft="6dp"
                     android:textColor="@color/coupon_yun"/>
                 <TextView
                     android:id="@+id/layout_sex"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textSize="22sp"
                     android:layout_marginTop="4dp"
                     android:layout_gravity="center_vertical"
                     android:text="haha"
                     android:textColor="@color/coupon_yun"/>
             </LinearLayout>
             <LinearLayout
                 android:layout_marginTop="5dp"
                 android:layout_width="match_parent"
                 android:layout_height="40dp"
                 android:background="@color/color_white_f7f7f7">
                 <ImageView
                     android:layout_width="30dp"
                     android:layout_height="30dp"
                     android:src="@drawable/nianlin"
                     android:layout_gravity="center_vertical"
                     android:layout_marginLeft="20dp"/>
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textSize="22sp"
                     android:layout_marginTop="4dp"
                     android:layout_gravity="center_vertical"
                     android:text="@string/age"
                     android:layout_marginLeft="6dp"
                     android:textColor="@color/coupon_yun"/>
                 <TextView
                     android:id="@+id/layout_age"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textSize="22sp"
                     android:layout_marginTop="4dp"
                     android:layout_gravity="center_vertical"
                     android:text="haha"
                     android:textColor="@color/coupon_yun"/>
             </LinearLayout>
             <LinearLayout
                 android:layout_marginTop="5dp"
                 android:layout_width="match_parent"
                 android:layout_height="40dp"
                 android:background="@color/color_white_f7f7f7">
                 <ImageView
                     android:layout_width="30dp"
                     android:layout_height="30dp"
                     android:src="@drawable/juzhu"
                     android:layout_gravity="center_vertical"
                     android:layout_marginLeft="20dp"/>
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textSize="22sp"
                     android:layout_marginTop="4dp"
                     android:layout_gravity="center_vertical"
                     android:text="@string/address"
                     android:layout_marginLeft="6dp"
                     android:textColor="@color/coupon_yun"/>
                 <TextView
                     android:id="@+id/layout_address"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textSize="22sp"
                     android:layout_marginTop="4dp"
                     android:layout_gravity="center_vertical"
                     android:text="haha"
                     android:textColor="@color/coupon_yun"/>
             </LinearLayout>
             <LinearLayout
                 android:layout_marginTop="5dp"
                 android:layout_width="match_parent"
                 android:layout_height="40dp"
                 android:background="@color/color_white_f7f7f7">
                 <ImageView
                     android:layout_width="30dp"
                     android:layout_height="30dp"
                     android:src="@drawable/gexingq"
                     android:layout_gravity="center_vertical"
                     android:layout_marginLeft="20dp"/>
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textSize="22sp"
                     android:layout_marginTop="4dp"
                     android:layout_gravity="center_vertical"
                     android:text="@string/gexing"
                     android:layout_marginLeft="6dp"
                     android:textColor="@color/coupon_yun"/>
                 <TextView
                     android:id="@+id/layout_qianming"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textSize="22sp"
                     android:ellipsize="end"
                     android:maxLines="2"
                     android:layout_marginTop="4dp"
                     android:layout_gravity="center_vertical"
                     android:text="hssssss"
                     android:textColor="@color/coupon_yun"/>
             </LinearLayout>
             <LinearLayout
                 android:layout_marginTop="5dp"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">

                 <Button
                     android:id="@+id/friend"
                     android:text="@string/tianjia"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:background="@drawable/select"
                     android:focusable="true"
                      />
             </LinearLayout>
         </LinearLayout>

        </RelativeLayout>





    </ScrollView>
</LinearLayout>
